--- a/src/components/works/works.css
+++ b/src/components/works/works.css
@@ -13,13 +13,14 @@
 }
 
 .work__list {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: fit-content;
   gap: 30px;
 }
 
 .card__wrapper {
   position: relative;
-  height: 360px;
 }
 
 .card {
@@ -197,8 +198,8 @@
   }
 
   .card__wrapper {
-    height: 360px;
-    width: 300px;
+    height: 340px;
+    width: 280px;
   }
 
   .content__wrapper {
